[package]
name = "zome_utils"
version = "0.1.0"
rust-version = "1.65.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = { version = "1.0", default-features = false }
#chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
hdk = { version = "=0.2.2", features = ["encoding"] }

# Force a specific version since hdk wont compile otherwise
#holochain_integrity_types = { version = "=0.1.1" }