[package]
name = "zome_utils"
version = "0.1.0"
rust-version = "1.65.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = { version = "1.0.163", default-features = false }
#chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
#holochain_zome_types = { version = "=0.2.4", default-features = false }
hdk = { version = "=0.3.0-beta-dev.34", features = ["encoding"] }

# Force a specific version since hdk wont compile otherwise
#holochain_integrity_types = { version = "=0.1.1" }